# attention-plasticity

./: .gitignore  README.md  analyze.py  pyproject.toml
attention_plasticity/: __init__.py  config.py  data_utils.py  dataset_cache.py  head_analysis.py  plasticity.py  statistics.py
configs/: qwen3-8b-yarn4x.yaml  qwen3-8b.yaml  smollm2-135m.yaml
configs/plots/: qwen3-8b-components.yaml  qwen3-8b-heatmap.yaml  qwen3-8b-plasticity.yaml  qwen3-8b-yarn4x-components.yaml  qwen3-8b-yarn4x-heatmap.yaml  qwen3-8b-yarn4x-plasticity.yaml  smollm2-135m-components.yaml  smollm2-135m-heatmap.yaml  smollm2-135m-plasticity.yaml
docs/: attention-plasticity.md  key-pair-selection.md  query-distribution.md
scripts/: plot_bucket_heatmap.py  plot_component_weights.py  plot_plasticity.py
tests/: test_analyze.py  test_config.py
